fix z-index of dropdown list

--- a/public/styles/style.styl
+++ b/public/styles/style.styl
@@ -363,6 +363,7 @@ div.dk_container
     .dk_options
       opacity: 1
       margin-top: 11px
+      z-index: 999
   > a.dk_toggle
     display: block
     position: relative
@@ -399,7 +400,7 @@ div.dk_container
     left: 0
     opacity: 0
     width: 100%
-    z-index: 10
+    z-index: 0
     display: none	9
     transition: 0.3s ease-out
     backface-visibility: hidden
